<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012-2025 The Android Money Manager Ex Project Team
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_budget"
        android:icon="@drawable/ic_action_settings_dark"
        android:title="@string/settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_budget_reload_forecast"
                android:title="@string/title_budget_reload_forecast" />
            <item
                android:id="@+id/menu_budget_use_simple_view"
                android:checkable="true"
                android:title="@string/title_budget_show_simple_view" />
            <item
                android:id="@+id/menu_budget_financial_year"
                android:checkable="true"
                android:title="@string/title_pref_budget_financial_year" />
            <item
                android:id="@+id/menu_budget_category_with_sub"
                android:checkable="true"
                android:title="@string/search_sub_category" />
            <item
                android:id="@+id/menu_budget_columns"
                android:title="@string/select_columns" >
                <menu>
                    <item
                        android:id="@id/frequencyTextView"
                        android:checkable="true"
                        android:title="@string/frequency" />
                    <item
                        android:id="@id/amountTextView"
                        android:checkable="true"
                        android:title="@string/amount" />
                    <item
                        android:id="@id/estimatedForPeriodTextView"
                        android:checkable="true"
                        android:title="@string/estimatedForPeriod" />
                    <item
                        android:id="@id/actualTextView"
                        android:checkable="true"
                        android:title="@string/actual" />
                    <item
                        android:id="@id/amountAvailableTextView"
                        android:checkable="true"
                        android:title="@string/amount_available" />
                    <item
                        android:id="@id/forecastRemainTextView"
                        android:checkable="true"
                        android:title="@string/forecast_remain" />
                </menu>
            </item>
        </menu>
    </item>
</menu>