<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012-2018 The Android Money Manager Ex Project Team
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit">
    </item>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete">
    </item>
    <item
        android:id="@+id/menu_reconciled"
        android:title="@string/status_reconciled">
    </item>
    <item
        android:id="@+id/menu_none"
        android:title="@string/status_none">
    </item>
    <item
        android:id="@+id/menu_follow_up"
        android:title="@string/status_follow_up">
    </item>
    <item
        android:id="@+id/menu_duplicate"
        android:title="@string/status_duplicate">
    </item>
    <item
        android:id="@+id/menu_void"
        android:title="@string/status_void">
    </item>
</menu>
