<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_account_filter"
        android:icon="@drawable/ic_action_settings_dark"
        android:orderInCategory="300"
        android:title="@string/settings"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_account_filter_all"
                    android:title="@string/menu_account_filter_all" />
                <item
                    android:id="@+id/menu_account_filter_open"
                    android:title="@string/menu_account_filter_open"
                    android:checked="true" />
                <item
                    android:id="@+id/menu_account_filter_favorite"
                    android:title="@string/menu_account_filter_favorite" />
                <item
                    android:id="@+id/menu_account_filter_custom"
                    android:title="@string/menu_account_filter_custom" />
            </group>
        </menu>
    </item>

</menu>
