<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012-2019 The Android Money Manager Ex Project Team
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuTransactionStatusSelector"
        app:showAsAction="ifRoom"
        android:icon="?attr/ic_action_foursquare"
        android:title="@string/status_filter">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_none"
                    android:title="@string/status_none"
                    android:checkable="true" />
                <item
                    android:id="@+id/menu_reconciled"
                    android:title="@string/status_reconciled"
                    android:checkable="true" />
                <item
                    android:id="@+id/menu_void"
                    android:title="@string/status_void"
                    android:checkable="true" />
                <item
                    android:id="@+id/menu_follow_up"
                    android:title="@string/status_follow_up"
                    android:checkable="true" />
                <item
                    android:id="@+id/menu_duplicate"
                    android:title="@string/status_duplicate"
                    android:checkable="true" />
            </group>
        </menu>
    </item>

</menu>