<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012-2018 The Android Money Manager Ex Project Team
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_chart"
        android:icon="?attr/ic_action_bargraph"
        android:title="@string/show_chart"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_sort"
        android:icon="?attr/ic_action_sort_1"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_asceding"
                    android:title="@string/sort_by_ascending"
                    android:checked="true"/>
                <item
                    android:id="@+id/menu_sort_desceding"
                    android:title="@string/sort_by_desceding"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_period"
        android:icon="?attr/ic_action_calendar_day"
        app:showAsAction="always"
        android:title="@string/select_the_years_to_be_displayed">
    </item>

</menu>