<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012-2016 The Android Money Manager Ex Project Team
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_database"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/mmex_activity_vertical_margin"
    android:paddingLeft="@dimen/mmex_activity_horizontal_margin"
    android:paddingRight="@dimen/mmex_activity_horizontal_margin"
    android:paddingTop="@dimen/mmex_activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.money.manager.ex.home.SelectDatabaseActivity">

    <include layout="@layout/toolbar"/>

    <!-- Intro -->
    <com.money.manager.ex.view.RobotoTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/intro_text" />

    <!-- Create Database text -->
    <com.money.manager.ex.view.RobotoTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/intro_create_db" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.money.manager.ex.view.RobotoButton
            android:id="@+id/createDatabaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_db" />
    </android.support.v7.widget.CardView>

    <!-- Open Database text -->
    <com.money.manager.ex.view.RobotoTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/intro_open_db" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.money.manager.ex.view.RobotoButton
            android:id="@+id/openDatabaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_database" />
    </android.support.v7.widget.CardView>

    <!-- Configure Synchronisation text -->
    <com.money.manager.ex.view.RobotoTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/intro_sync" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.money.manager.ex.view.RobotoButton
            android:id="@+id/setupSyncButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configure_sync" />
    </android.support.v7.widget.CardView>

</LinearLayout>
