<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012-2018 The Android Money Manager Ex Project Team
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_duplicate_transactions"
        android:icon="?attr/ic_action_copy"
        android:title="@string/duplicate_selected_transactions"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_change_status"
        android:icon="@drawable/ic_tag_text_outline_dark"
        android:title="@string/change_status"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="?attr/ic_action_delete"
        android:title="@string/delete_transaction"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_menu_selectall_holo_dark"
        android:title="@string/select_all"
        app:showAsAction="ifRoom"/>

</menu>